# test_fastapi_redis

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/: main.py  test_red.py
backend/app/core/: settings.py
backend/app/models/: base.py
backend/app/redis/: connect.py
backend/app/services/: examinations.py  make_vote.py
