[tool.poetry]
name = "vote_service"
version = "0.1.0"
description = ""
authors = ["Tarlex <tarlex.py@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.85.1"
aioredis = "^2.0.1"
black = "^22.10.0"
uvicorn = "^0.19.0"
redisearch = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
